[ENG-11340] Fix images button gallery overlap (#1184)

--- a/src/components/AppQuoteDetailPage/index.scss
+++ b/src/components/AppQuoteDetailPage/index.scss
@@ -108,7 +108,7 @@
   .quote-project-images {
     float: right;
 
-    .image-gallery-container {
+    .ImageGallery-container {
       width: 150px;
       .image-gallery-thumb {
         .image-loader__image {
@@ -136,7 +136,7 @@
       }
     }
 
-    .image-gallery-container {
+    .ImageGallery-container {
       margin-bottom: $v-24;
     }
   }
