--- a/src/components/common/AppConfigPreview.scss
+++ b/src/components/common/AppConfigPreview.scss
@@ -59,7 +59,7 @@ $preview-size: 150px;
   border-radius: none;
 
   // increase size of gallery view
-  .image-gallery-container {
+  .ImageGallery-container {
     width: 150px;
 
     .image-gallery-thumb {
