--- a/src/components/common/AppQuoteComponents/QuoteLine/index.scss
+++ b/src/components/common/AppQuoteComponents/QuoteLine/index.scss
@@ -49,7 +49,7 @@
 .quote-line-imageGallery {
   position: relative;
 
-  .image-gallery-container {
+  .ImageGallery-container {
     height: 100% !important; // override inline styles
     position: absolute;
     right: 0;
